--- a/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/Articles.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/Articles.fxml
@@ -22,53 +22,47 @@
                     <children>
                         <HBox prefHeight="120.0" prefWidth="871.0">
                             <VBox.margin>
-                                <Insets bottom="20.0"/>
+                                <Insets bottom="20.0" />
                             </VBox.margin>
                             <children>
                                 <Label prefHeight="35.0" prefWidth="142.0" styleClass="main-title" text="Articles">
                                     <HBox.margin>
-                                        <Insets top="30.0"/>
+                                        <Insets top="30.0" />
                                     </HBox.margin>
                                 </Label>
-                                <VBox maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0"
-                                      fx:id="successPopup" styleClass="successPopup" visible="false">
+                                <VBox fx:id="successPopup" maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0" styleClass="successPopup" visible="false">
                                     <HBox.margin>
-                                        <Insets left="325.0"/>
+                                        <Insets left="325.0" />
                                     </HBox.margin>
                                     <children>
-                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0"
-                                              styleClass="successPopup-indicator"/>
+                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0" styleClass="successPopup-indicator" />
                                         <HBox prefHeight="120.0" prefWidth="340.0" styleClass="successPopup-container">
                                             <children>
                                                 <Label prefHeight="17.0" prefWidth="33.0">
                                                     <padding>
-                                                        <Insets left="10.0" top="17.0"/>
+                                                        <Insets left="10.0" top="17.0" />
                                                     </padding>
                                                     <graphic>
-                                                        <Region styleClass="successPopup-img"/>
+                                                        <Region styleClass="successPopup-img" />
                                                     </graphic>
                                                 </Label>
                                                 <VBox prefHeight="110.0" prefWidth="312.0">
                                                     <children>
-                                                        <Label styleClass="successPopup-title"
-                                                               text="Article ajoutée !"/>
-                                                        <Label fx:id="successPopupId" styleClass="successPopup-subtitle"
-                                                               text="L'article n°X a bien été ajoutée !"/>
+                                                        <Label styleClass="successPopup-title" text="Article ajoutée !" />
+                                                        <Label fx:id="successPopupId" styleClass="successPopup-subtitle" text="L'article n°X a bien été ajoutée !" />
                                                     </children>
                                                     <padding>
-                                                        <Insets left="15.0" top="15.0"/>
+                                                        <Insets left="15.0" top="15.0" />
                                                     </padding>
                                                 </VBox>
                                                 <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
                                                     <children>
-                                                        <Button mnemonicParsing="false" prefHeight="28.0"
-                                                                prefWidth="28.0" styleClass="successPopup-close"
-                                                                onMouseClicked="#onClosePopup">
+                                                        <Button mnemonicParsing="false" onMouseClicked="#onClosePopup" prefHeight="28.0" prefWidth="28.0" styleClass="successPopup-close">
                                                             <graphic>
-                                                                <Region styleClass="successPopup-close-img"/>
+                                                                <Region styleClass="successPopup-close-img" />
                                                             </graphic>
                                                             <VBox.margin>
-                                                                <Insets right="15.0" top="20.0"/>
+                                                                <Insets right="15.0" top="20.0" />
                                                             </VBox.margin>
                                                         </Button>
                                                     </children>
@@ -99,7 +93,7 @@
                                 </HBox>
                                 <ScrollPane prefHeight="444.0" prefWidth="869.0">
                                     <content>
-                                        <VBox style="-fx-background-color: white;" fx:id="contentTable">
+                                        <VBox fx:id="contentTable" style="-fx-background-color: white;">
                                             <children>
 
                                             </children>
@@ -124,45 +118,37 @@
                 </VBox>
             </center>
         </BorderPane>
-        <VBox fx:id="confirmationDialog" visible="false" alignment="CENTER" prefHeight="200.0" prefWidth="100.0"
-              style="-fx-background-color: rgba(0,0,0,0.25);">
+        <VBox fx:id="confirmationDialog" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(0,0,0,0.25);" visible="false">
             <children>
-                <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0"
-                      styleClass="confirm-dialog">
+                <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0" styleClass="confirm-dialog">
                     <children>
-                        <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0"
-                              styleClass="confirm-dialog-topbar-red"/>
+                        <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0" styleClass="confirm-dialog-topbar-red" />
                         <HBox VBox.vgrow="ALWAYS">
                             <VBox.margin>
-                                <Insets bottom="20.0" left="30.0" right="20.0" top="20.0"/>
+                                <Insets bottom="20.0" left="30.0" right="20.0" top="20.0" />
                             </VBox.margin>
                             <children>
-                                <Label prefHeight="100.0" prefWidth="200.0">
+                                <Label prefHeight="100.0" prefWidth="83.0">
                                     <graphic>
-                                        <Region styleClass="warning-img"/>
+                                        <Region styleClass="warning-img" />
                                     </graphic>
                                 </Label>
-                                <VBox prefWidth="500.0">
+                                <VBox maxHeight="165.0" prefHeight="165.0" prefWidth="380.0">
                                     <children>
-                                        <Label prefWidth="460.0" styleClass="confirm-dialog-title"
-                                               text="Supprimer la commande ?"/>
-                                        <Label fx:id="descDialog"/>
+                                        <Label prefWidth="460.0" styleClass="confirm-dialog-title" text="Supprimer l'article ?" />
+                                        <Label fx:id="descDialog" prefHeight="52.0" prefWidth="349.0" />
                                         <HBox alignment="CENTER" prefHeight="68.0" prefWidth="356.0" spacing="40.0">
                                             <children>
-                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
-                                                        styleClass="confirm-dialog-button-ok" text="Oui"
-                                                        fx:id="okButton"/>
-                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
-                                                        styleClass="confirm-dialog-button-cancel" text="Annuler"
-                                                        fx:id="cancelButton"/>
+                                                <Button fx:id="okButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="confirm-dialog-button-ok" text="Oui" />
+                                                <Button fx:id="cancelButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="confirm-dialog-button-cancel" text="Annuler" />
                                             </children>
                                             <VBox.margin>
-                                                <Insets top="65.0"/>
+                                                <Insets top="50.0" />
                                             </VBox.margin>
                                         </HBox>
                                     </children>
                                     <HBox.margin>
-                                        <Insets left="30.0"/>
+                                        <Insets left="30.0" />
                                     </HBox.margin>
                                 </VBox>
                             </children>
