--- a/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/EditVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/EditVehicule.fxml
@@ -11,128 +11,148 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.entreprise.EditVehiculeController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.entreprise.EditVehiculeController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
             <left>
-                <fx:include source="Sidebar.fxml" />
+                <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button" text="Retour">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button"
+                                text="Retour">
                             <graphic>
-                                <Region styleClass="back-button-img" />
+                                <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
-                  <HBox>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                     <children>
-                              <Label prefHeight="35.0" prefWidth="654.0" styleClass="main-title" text="Modification de la commande n°" />
-                        <Pane prefHeight="35.0" prefWidth="192.0">
-                           <children>
-                              <VBox fx:id="errorPopup" layoutX="-175.0" layoutY="-43.0" maxHeight="139.0" minWidth="400.0" prefHeight="139.0" prefWidth="400.0" styleClass="errorPopup" visible="false">
-                                 <HBox.margin>
-                                    <Insets left="325.0" />
-                                 </HBox.margin>
-                                 <children>
-                                    <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0" styleClass="errorPopup-indicator" />
-                                    <HBox prefHeight="120.0" prefWidth="400.0" styleClass="errorPopup-container">
-                                       <children>
-                                          <Label prefHeight="17.0" prefWidth="33.0">
-                                             <padding>
-                                                <Insets left="10.0" top="17.0" />
-                                             </padding>
-                                             <graphic>
-                                                <Region styleClass="errorPopup-img" />
-                                             </graphic>
-                                          </Label>
-                                          <VBox prefHeight="110.0" prefWidth="312.0">
-                                             <children>
-                                                <Label styleClass="errorPopup-title" text="Erreur !" />
-                                                <Label fx:id="popupMessage" styleClass="errorPopup-subtitle" />
-                                             </children>
-                                             <padding>
-                                                <Insets left="15.0" top="15.0" />
-                                             </padding>
-                                          </VBox>
-                                          <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
-                                             <children>
-                                                <Button mnemonicParsing="false" onMouseClicked="#onClosePopup" prefHeight="28.0" prefWidth="28.0" styleClass="successPopup-close">
-                                                   <graphic>
-                                                      <Region styleClass="successPopup-close-img" />
-                                                   </graphic>
-                                                   <VBox.margin>
-                                                      <Insets right="15.0" top="10.0" />
-                                                   </VBox.margin>
-                                                </Button>
-                                             </children>
-                                          </VBox>
-                                       </children>
-                                    </HBox>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </Pane>
-                     </children>
-                  </HBox>
+                        <HBox>
+                            <VBox.margin>
+                                <Insets top="20.0"/>
+                            </VBox.margin>
+                            <children>
+                                <Label fx:id="title" prefHeight="35.0" prefWidth="654.0" styleClass="main-title"
+                                       text="Modification de la commande n°"/>
+                                <Pane prefHeight="35.0" prefWidth="192.0">
+                                    <children>
+                                        <VBox fx:id="errorPopup" layoutX="-175.0" layoutY="-43.0" maxHeight="139.0"
+                                              minWidth="400.0" prefHeight="139.0" prefWidth="400.0"
+                                              styleClass="errorPopup" visible="false">
+                                            <HBox.margin>
+                                                <Insets left="325.0"/>
+                                            </HBox.margin>
+                                            <children>
+                                                <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0"
+                                                      styleClass="errorPopup-indicator"/>
+                                                <HBox prefHeight="120.0" prefWidth="400.0"
+                                                      styleClass="errorPopup-container">
+                                                    <children>
+                                                        <Label prefHeight="17.0" prefWidth="33.0">
+                                                            <padding>
+                                                                <Insets left="10.0" top="17.0"/>
+                                                            </padding>
+                                                            <graphic>
+                                                                <Region styleClass="errorPopup-img"/>
+                                                            </graphic>
+                                                        </Label>
+                                                        <VBox prefHeight="110.0" prefWidth="312.0">
+                                                            <children>
+                                                                <Label styleClass="errorPopup-title" text="Erreur !"/>
+                                                                <Label fx:id="popupMessage"
+                                                                       styleClass="errorPopup-subtitle"/>
+                                                            </children>
+                                                            <padding>
+                                                                <Insets left="15.0" top="15.0"/>
+                                                            </padding>
+                                                        </VBox>
+                                                        <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
+                                                            <children>
+                                                                <Button mnemonicParsing="false"
+                                                                        onMouseClicked="#onClosePopup" prefHeight="28.0"
+                                                                        prefWidth="28.0"
+                                                                        styleClass="successPopup-close">
+                                                                    <graphic>
+                                                                        <Region styleClass="successPopup-close-img"/>
+                                                                    </graphic>
+                                                                    <VBox.margin>
+                                                                        <Insets right="15.0" top="10.0"/>
+                                                                    </VBox.margin>
+                                                                </Button>
+                                                            </children>
+                                                        </VBox>
+                                                    </children>
+                                                </HBox>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </Pane>
+                            </children>
+                        </HBox>
                         <HBox alignment="CENTER" prefHeight="459.0" prefWidth="871.0">
                             <children>
-                                <VBox maxHeight="300.0" prefHeight="407.0" prefWidth="379.0" styleClass="profil-container">
+                                <VBox maxHeight="300.0" prefHeight="407.0" prefWidth="379.0"
+                                      styleClass="profil-container">
                                     <children>
-                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
+                                              prefWidth="100.0" styleClass="profil-container-header">
                                             <children>
-                                                <Label styleClass="profil-container-header-title" text="Détails du véhicule" />
+                                                <Label styleClass="profil-container-header-title"
+                                                       text="Détails du véhicule"/>
                                             </children>
                                             <padding>
-                                                <Insets left="20.0" />
+                                                <Insets left="20.0"/>
                                             </padding>
                                         </VBox>
                                         <VBox prefHeight="233.0" prefWidth="377.0" spacing="20.0">
                                             <children>
                                                 <HBox maxWidth="438.0" prefHeight="38.0" prefWidth="438.0">
                                                     <children>
-                                                        <VBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="240.0">
+                                                        <VBox alignment="CENTER_LEFT" prefHeight="38.0"
+                                                              prefWidth="240.0">
                                                             <children>
-                                                                <Label text="Plaque d'immatriculation" />
+                                                                <Label text="Plaque d'immatriculation"/>
                                                             </children>
                                                             <padding>
-                                                                <Insets left="10.0" />
+                                                                <Insets left="10.0"/>
                                                             </padding>
                                                         </VBox>
-                                                        <VBox fx:id="vehicule" alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="198.0">
+                                                        <VBox alignment="CENTER_RIGHT" prefHeight="38.0"
+                                                              prefWidth="198.0">
                                                             <children>
-                                                                <Label fx:id="vehicule" />
+                                                                <Label fx:id="vehicule"/>
                                                             </children>
                                                         </VBox>
                                                     </children>
                                                 </HBox>
-                                                <TextField fx:id="poids" maxWidth="250.0" minHeight="40.0" minWidth="250.0" promptText="Poids maximum supporté" />
+                                                <TextField fx:id="poids" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" promptText="Poids maximum supporté"/>
                                             </children>
                                             <VBox.margin>
-                                                <Insets />
+                                                <Insets/>
                                             </VBox.margin>
                                             <padding>
-                                                <Insets left="30.0" top="60.0" />
+                                                <Insets left="30.0" top="60.0"/>
                                             </padding>
                                         </VBox>
                                     </children>
                                 </VBox>
                             </children>
                             <VBox.margin>
-                                <Insets top="25.0" />
+                                <Insets top="25.0"/>
                             </VBox.margin>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <Button id="vehiculeButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier le véhicule" />
+                                <Button id="vehiculeButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false"
+                                        onMouseClicked="#onEditButton" styleClass="addCommandeButton"
+                                        text="Modifier le véhicule"/>
                             </children>
                         </HBox>
                     </children>
                     <padding>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="20.0"/>
                     </padding>
                 </VBox>
             </center>
