--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Entreprise.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Entreprise.fxml
@@ -48,8 +48,8 @@
                                                 </Label>
                                                 <VBox prefHeight="110.0" prefWidth="312.0">
                                                     <children>
-                                                        <Label styleClass="successPopup-title" text="Commande ajoutée !" />
-                                                        <Label styleClass="successPopup-subtitle" text="La commande n°X a bien été ajoutée !" />
+                                                        <Label fx:id="popupTitle" styleClass="successPopup-title" text="Commande ajoutée !" />
+                                                        <Label fx:id="popupMessage" styleClass="successPopup-subtitle" text="La commande n°X a bien été ajoutée !" />
                                                     </children>
                                                     <padding>
                                                         <Insets left="15.0" top="15.0" />
@@ -117,5 +117,44 @@
                 </VBox>
             </center>
         </BorderPane>
+      <VBox fx:id="confirmationDialog" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(0,0,0,0.25);" visible="false">
+         <children>
+            <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0" styleClass="confirm-dialog">
+               <children>
+                  <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0" styleClass="confirm-dialog-topbar-red" />
+                  <HBox VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="30.0" right="20.0" top="20.0" />
+                     </VBox.margin>
+                     <children>
+                        <Label prefHeight="100.0" prefWidth="200.0">
+                           <graphic>
+                              <Region styleClass="warning-img" />
+                           </graphic>
+                        </Label>
+                        <VBox prefWidth="500.0">
+                           <children>
+                              <Label prefWidth="460.0" styleClass="confirm-dialog-title" text="Supprimer l'entreprise ?" />
+                              <Label fx:id="descDialog" />
+                              <HBox alignment="CENTER" prefHeight="68.0" prefWidth="356.0" spacing="40.0">
+                                 <children>
+                                    <Button fx:id="okButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="confirm-dialog-button-ok" text="Oui" />
+                                    <Button fx:id="cancelButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="confirm-dialog-button-cancel" text="Annuler" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="65.0" />
+                                 </VBox.margin>
+                              </HBox>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="30.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
     </children>
 </StackPane>
