--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditEntreprise.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditEntreprise.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
 
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
@@ -20,20 +22,77 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour"
-                                onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button"
+                                text="Retour">
                             <graphic>
                                 <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
-                        <Label fx:id="title" styleClass="main-title" text="Modification du propriétaire n°">
+                        <HBox>
                             <VBox.margin>
                                 <Insets top="20.0"/>
                             </VBox.margin>
-                        </Label>
+                            <children>
+                                <Label fx:id="title" prefHeight="35.0" prefWidth="657.0" styleClass="main-title"
+                                       text="Modification de l'entreprise n°"/>
+                                <Pane prefHeight="35.0" prefWidth="192.0">
+                                    <children>
+                                        <VBox fx:id="errorPopup" layoutX="-201.0" layoutY="-52.0" maxHeight="114.0"
+                                              minWidth="400.0" prefHeight="114.0" prefWidth="400.0"
+                                              styleClass="errorPopup" visible="false">
+                                            <HBox.margin>
+                                                <Insets left="325.0"/>
+                                            </HBox.margin>
+                                            <children>
+                                                <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0"
+                                                      styleClass="errorPopup-indicator"/>
+                                                <HBox prefHeight="120.0" prefWidth="340.0"
+                                                      styleClass="errorPopup-container">
+                                                    <children>
+                                                        <Label prefHeight="17.0" prefWidth="33.0">
+                                                            <padding>
+                                                                <Insets left="10.0" top="17.0"/>
+                                                            </padding>
+                                                            <graphic>
+                                                                <Region styleClass="errorPopup-img"/>
+                                                            </graphic>
+                                                        </Label>
+                                                        <VBox prefHeight="110.0" prefWidth="312.0">
+                                                            <children>
+                                                                <Label styleClass="errorPopup-title" text="Erreur !"/>
+                                                                <Label fx:id="popupMessage"
+                                                                       styleClass="errorPopup-subtitle"/>
+                                                            </children>
+                                                            <padding>
+                                                                <Insets left="15.0" top="15.0"/>
+                                                            </padding>
+                                                        </VBox>
+                                                        <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
+                                                            <children>
+                                                                <Button mnemonicParsing="false"
+                                                                        onMouseClicked="#onClosePopup" prefHeight="28.0"
+                                                                        prefWidth="28.0"
+                                                                        styleClass="successPopup-close">
+                                                                    <graphic>
+                                                                        <Region styleClass="successPopup-close-img"/>
+                                                                    </graphic>
+                                                                    <VBox.margin>
+                                                                        <Insets right="15.0" top="20.0"/>
+                                                                    </VBox.margin>
+                                                                </Button>
+                                                            </children>
+                                                        </VBox>
+                                                    </children>
+                                                </HBox>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </Pane>
+                            </children>
+                        </HBox>
                         <HBox alignment="CENTER" prefHeight="518.0" prefWidth="871.0" spacing="30.0">
                             <children>
-                                <VBox maxHeight="350.0" prefWidth="400.0" styleClass="profil-container">
+                                <VBox maxHeight="400.0" prefWidth="400.0" styleClass="profil-container">
                                     <children>
                                         <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
                                               prefWidth="100.0" styleClass="profil-container-header">
@@ -45,11 +104,16 @@
                                                 <Insets left="20.0"/>
                                             </padding>
                                         </VBox>
-                                        <VBox prefHeight="285.0" prefWidth="398.0" spacing="20.0">
+                                        <VBox prefHeight="340.0" prefWidth="398.0" spacing="20.0">
                                             <children>
                                                 <TextField fx:id="adresse" maxWidth="250.0" minHeight="40.0"
                                                            minWidth="250.0" prefWidth="150.0"
                                                            promptText="Adresse de l'entreprise"/>
+                                                <TextField fx:id="codePostalEntreprise" maxWidth="250.0"
+                                                           minHeight="40.0" minWidth="250.0" prefWidth="150.0"
+                                                           promptText="Code postal"/>
+                                                <TextField fx:id="villeEntreprise" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0" promptText="Ville"/>
                                                 <TextField fx:id="numTel" maxWidth="250.0" prefHeight="40.0"
                                                            prefWidth="250.0" promptText="Numéro de téléphone"/>
                                                 <TextField fx:id="gps" maxWidth="250.0" prefHeight="40.0"
@@ -62,7 +126,7 @@
                                         </VBox>
                                     </children>
                                 </VBox>
-                                <VBox maxHeight="350.0" maxWidth="400.0" prefWidth="400.0"
+                                <VBox maxHeight="400.0" maxWidth="400.0" prefWidth="400.0"
                                       styleClass="profil-container">
                                     <children>
                                         <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0"
@@ -78,7 +142,7 @@
                                                 <Insets left="20.0"/>
                                             </padding>
                                         </VBox>
-                                        <VBox prefHeight="288.0" prefWidth="398.0" spacing="20.0">
+                                        <VBox prefHeight="335.0" prefWidth="398.0" spacing="20.0">
                                             <children>
                                                 <TextField fx:id="nom" maxWidth="250.0" prefHeight="40.0"
                                                            prefWidth="250.0" promptText="Nom du propriétaire"/>
@@ -87,6 +151,10 @@
                                                 <TextField fx:id="adresseProprio" maxWidth="250.0" minHeight="40.0"
                                                            minWidth="250.0" prefWidth="150.0"
                                                            promptText="Adresse du propriétaire"/>
+                                                <TextField fx:id="codePostal" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0" promptText="Code postal"/>
+                                                <TextField fx:id="city" maxWidth="250.0" minHeight="40.0"
+                                                           minWidth="250.0" prefWidth="150.0" promptText="Ville"/>
                                             </children>
                                             <padding>
                                                 <Insets left="30.0" top="40.0"/>
@@ -99,8 +167,8 @@
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
                                 <Button id="editButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false"
-                                        text="Modifier le propriétaire" onMouseClicked="#onEditButton"
-                                        styleClass="addCommandeButton"/>
+                                        onMouseClicked="#onEditButton" styleClass="addCommandeButton"
+                                        text="Modifier le propriétaire"/>
                             </children>
                         </HBox>
                     </children>
