--- a/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/Articles.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/Articles.fxml
@@ -48,7 +48,7 @@
                                                 </Label>
                                                 <VBox prefHeight="110.0" prefWidth="312.0">
                                                     <children>
-                                                        <Label styleClass="successPopup-title" text="Article ajoutée !" />
+                                                        <Label fx:id="title" styleClass="successPopup-title" text="Article ajoutée !" />
                                                         <Label fx:id="successPopupId" styleClass="successPopup-subtitle" text="L'article n°X a bien été ajoutée !" />
                                                     </children>
                                                     <padding>
