--- a/src/main/resources/com/mmn/circuitscourts/css/style.css
+++ b/src/main/resources/com/mmn/circuitscourts/css/style.css
@@ -1388,3 +1388,18 @@
 .add-categorie:hover {
     -fx-underline: true;
 }
+
+.pagination-container {
+    -fx-border-width: 1px 0 0 0;
+    -fx-border-style: solid;
+    -fx-border-color: #EAECF0;
+}
+
+.pagination-button {
+    -fx-background-color: white;
+    -fx-border-radius: 4px;
+    -fx-border-color: #EAECF0;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+    -fx-cursor: hand;
+}
